# hrm_nextbean_api/docs/swagger.json
@@ -236,6 +236,46 @@
                 }
             }
         },
+        "/auth/login-google": {
+            "post": {
+                "description": "login in using google email account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "login by google email account",
+                "parameters": [
+                    {
+                        "description": "Login request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.GoogleToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful login",
+                        "schema": {
+                            "$ref": "#/definitions/utils.success_response"
+                        }
+                    },
+                    "400": {
+                        "description": "login failure",
+                        "schema": {
+                            "$ref": "#/definitions/utils.error_response"
+                        }
+                    }
+                }
+            }
+        },
         "/interns": {
             "get": {
                 "description": "Get a list of interns with filtering, sorting, and pagination",
@@ -2351,6 +2391,23 @@
             "type": "object",
             "properties": {
                 "actual-effort": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.GoogleToken": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expiry": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "token_type": {
                     "type": "string"
                 }
             }
