# hrm_nextbean_api/services/OauthGoogleServices/controller/google_login_handler.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"bytes"
 	"context"
 	"database/sql"
 	"encoding/json"
@@ -14,24 +15,26 @@ import (
 	"golang.org/x/oauth2"
 )
 
+// @Summary		login by google email account
+// @Description	login in using google email account
+// @Tags			Authentication
+// @Accept			json
+// @Produce			json
+// @Param			request	body		model.GoogleToken	 true	"Login request"
+// @Success		200		{object}	utils.success_response	"Successful login"
+// @Failure		400		{object}	utils.error_response	"login failure"
+// @Router			/auth/login-google [post]
 func HandleGoogleLogin(a *model.OauthApp, db *sql.DB) func(w http.ResponseWriter, r *http.Request) {
 	return func(w http.ResponseWriter, r *http.Request) {
 		data_response := make(map[string]interface{})
-		code := r.URL.Query().Get("code")
+		token := &oauth2.Token{}
 
-		if code == "" {
-			// Nếu không có code, chuyển hướng đến trang đăng nhập Google
-			url := a.Conf.AuthCodeURL("nextbean-center", oauth2.AccessTypeOffline)
-			http.Redirect(w, r, url, http.StatusTemporaryRedirect)
+		var body_data bytes.Buffer
+		if _, err_read_body := body_data.ReadFrom(r.Body); err_read_body != nil {
+			utils.WriteJSON(w, utils.ErrorResponse_InvalidRequest(err_read_body))
 			return
 		}
-
-		// Nếu có code, xử lý callback
-		token, err := a.Conf.Exchange(context.Background(), code)
-		if err != nil {
-			utils.WriteJSON(w, utils.ErrorResponse_BadRequest("cannot login with google account (s1)", err))
-			return
-		}
+		json.Unmarshal(body_data.Bytes(), token)
 
 		client := a.Conf.Client(context.Background(), token)
 		resp, err := client.Get("https://www.googleapis.com/oauth2/v2/userinfo")
