# hrm_nextbean_api/services/OauthGoogleServices/model/gg_token_model.go
@@ -1,0 +1,8 @@
+package model
+
+type GoogleToken struct {
+	AccessToken  string `json:"access_token"`
+	TokenType    string `json:"token_type"`
+	RefreshToken string `json:"refresh_token"`
+	Expiry       string `json:"expiry"`
+}
